1.创建CrimeFragment的子类CrimePagerActivity 2.将布局根容器改为ViewPager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity">
-
         </activity>
         <activity android:name=".CrimeFragment">
         </activity>
-
         <activity android:name=".CrimeListFragment">
+        </activity>
+        <activity android:name=".CrimePagerActivity">
         </activity>
     </application>
 
