--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         </activity>
         <activity android:name=".CrimeListFragment">
         </activity>
-        <activity android:name=".CrimePagerActivity">
+        <activity android:name=".CrimePagerActivity"
+            android:parentActivityName=".CrimeListActivity"
+            >
         </activity>
     </application>
 
